# rust-base

./: Cargo.toml  changelog.md  readme.md
.cargo/: config.toml
examples/: quick-dev.rs
src/: config.rs  error.rs  lib.rs  main.rs  prelude.rs
src/fs/: error.rs  fs_sub.rs  mod.rs  tests.rs
src/utils/: direntry_froms.rs
