[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
description = "{{description}}"
authors = ["{{authors}}"]

[lints.rust]
unsafe_code = "forbid"
unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
#Other
derive_more = {version = "1", features = ["from"] }

[dev-dependencies]
anyhow = "1"
