[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "{{description}}"
authors = ["{{authors}}"]
readme = "readme.md"
repository = "https://github.com/{{username}}/{{project-name}}.git"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# My libs
grapple_utils = { version = "*", features = ["b64", "b58", "cuuid"] }
grapple_db = { version = "*", features = [ "redis"] }

# Async
tokio = { version = "1", features = ["full"] }
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
#Other
derive_more = {version = "1", features = ["from"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1"